todo_app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: pvc-100m
      containers:
        - name: todo-app
          image: tomjtoth/devops-with-kubernetes:todo-app-2.2
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-data
              mountPath: /app/public/data
