todo_app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 55555
      protocol: TCP
      targetPort: 3000
